--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+#set -g default-terminal "xterm"
 set -g mouse on
 
 # Set prefix to Ctrl-Space instead of Ctrl-b
@@ -23,3 +23,22 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+#set -g default-terminal "tmux-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+#set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+#set-environment -g COLORTERM "truecolor"
