--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,3 +42,5 @@ run '~/.tmux/plugins/tpm/tpm'
 #set -ga terminal-overrides ",*256col*:Tc"
 #set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 #set-environment -g COLORTERM "truecolor"
+
+setw -g alternate-screen off
