--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -38,7 +39,7 @@ set -g @plugin "arcticicestudio/nord-tmux"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-#set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 #set -ga terminal-overrides ",*256col*:Tc"
 #set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 #set-environment -g COLORTERM "truecolor"
